examples/failing/OverlappingBinders1.purs
module Main where

test x x = x
